--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/goku.svg">
+    <link rel="stylesheet" href="/src/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aarav Uppal</title>
   </head>
